--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,15 @@ before_install:
 
 script:
   - docker run -e CI=true udemy-docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "udemy-docker-react"
+  env: "UdemyDockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-346801759259"
+  bucket_path: udemy-docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
